...
                  Get.back(); // close quick action sheet
                  showEditComicDetailsSheet(context, comic, controller);
                },
              ),
              ListTile(
                leading: Icon(Icons.delete_outline, color: Colors.redAccent),
                title: Text("ลบเรื่องนี้ออกจากคลัง", style: TextStyle(color: Colors.redAccent, fontWeight: FontWeight.bold)),
                shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(10)),
                onTap: () {
                  Get.back(); // close quick action sheet
                  confirmDeleteComicDialog(context, comic, controller);
                },
              ),
...
                ? Center(
                    child: Column(
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Icon(Icons.library_books, size: 64, color: Colors.grey[800]),
                        SizedBox(height: 10),
                        Text(controller.searchQuery.isEmpty ? "ยังไม่มีหนังสือในคลัง" : "ไม่พบรายการที่ค้นหา", style: TextStyle(color: Colors.grey)),
                      ],
                    ),
                  )
                : Center(
                    child: ConstrainedBox(
                      constraints: BoxConstraints(maxWidth: 1200),
...
