...
                unselectedIconTheme: IconThemeData(color: Colors.grey),
                unselectedLabelTextStyle: TextStyle(color: Colors.grey),
                backgroundColor: Colors.black,
                labelType: NavigationRailLabelType.all,
                destinations: [
                  NavigationRailDestination(icon: Icon(Icons.history), label: Text("RECENT")),
                  NavigationRailDestination(icon: Icon(Icons.grid_view), label: Text("LIBRARY")),
                ],
              ),
              VerticalDivider(thickness: 1, width: 1, color: Colors.grey[900]),
            ],
            Expanded(child: pages[currentIndex.value]),
          ],
...
